--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.responsible_nrg</groupId>
-	<artifactId>EurekaPrimaryServer</artifactId>
+	<artifactId>EurekaSecondaryServer</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>EurekaPrimaryServer</name>
-	<description>Eureka Primary Server</description>
+	<name>EurekaSecondaryServer</name>
+	<description>Eureka Secondary Server</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
