--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,11 +1,11 @@
 ---
 spring:
   application:
-    name: EurekaPrimaryServer
+    name: EurekaSecondaryServer
   cloud:
     config: 
       uri: http://config.responsible-nrg.com
   profiles:
-    active: eureka-primary
+    active: eureka-secondary
 
            
