--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,6 +7,8 @@ spring:
       uri: http://config.responsible-nrg.com
   profiles:
     active: eureka-secondary
+server:
+  port: 8012
 
 
            
