Reconfigued Eureka as a cluster

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 ---
 spring:
   application:
-    name: EurekaSecondaryServer
+    name: Eureka-Cluster
   cloud:
     config: 
       uri: http://config.responsible-nrg.com
